<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">

    <TextView
        android:id="@+id/serListAlan"
        android:layout_width="175dp"
        android:layout_height="20dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/border_style"
        android:text="Arızayı Alan"
        android:textColor="@color/textcolor"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/serListYetkili"
        app:layout_constraintTop_toBottomOf="@+id/serListDurum"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/serListKayNo"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/border_style"
        android:text="Kayıt No"
        android:textColor="@color/textcolor"
        android:textSize="10sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/serListMakNo"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/border_style"
        android:text="@string/makNoHint"
        android:textColor="@color/textcolor"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/serListKayNo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/serListMarka"
        android:layout_width="75dp"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/border_style"
        android:text="Marka"
        android:textColor="@color/textcolor"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/serListMakNo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/serListModel"
        android:layout_width="75dp"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/border_style"
        android:text="@string/serListmodel"
        android:textColor="@color/textcolor"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/serListMarka"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/serListSerNo"
        android:layout_width="79dp"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/border_style"
        android:text="@string/serList_seri_no"
        android:textColor="@color/textcolor"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/serListModel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/serListUnvan"
        android:layout_width="360dp"
        android:layout_height="20dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/border_style"
        android:text="@string/unvantext"
        android:textColor="@color/textcolor"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serListMarka"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/serListSikayet"
        android:layout_width="360dp"
        android:layout_height="275dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/border_style"
        android:text="@string/serListSikayet"
        android:textColor="@color/textcolor"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serListYetkili"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/serListDurum"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/border_style"
        android:text="@string/serListDurumu"
        android:textColor="@color/textcolor"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serListUnvan"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/serListTarih"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/border_style"
        android:text="@string/serListTarih"
        android:textColor="@color/textcolor"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/serListDurum"
        app:layout_constraintTop_toBottomOf="@+id/serListUnvan"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/serListSaat"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/border_style"
        android:text="G.Saat"
        android:textColor="@color/textcolor"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/serListTarih"
        app:layout_constraintTop_toBottomOf="@+id/serListUnvan"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/serListTek"
        android:layout_width="144dp"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/border_style"
        android:text="@string/serListTeknis"
        android:textColor="@color/textcolor"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/serListSaat"
        app:layout_constraintTop_toBottomOf="@+id/serListUnvan"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/divider"
        android:layout_width="360dp"
        android:layout_height="3dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/border_style_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serListSikayet"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/serListYetkili"
        android:layout_width="175dp"
        android:layout_height="20dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/border_style"
        android:text="Yetkili"
        android:textColor="@color/textcolor"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serListDurum"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>