<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".servis_bilgi">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".servis_bilgi">

        <TextView
            android:id="@+id/tsconnectText2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/border_style"
            android:gravity="center"
            android:text="@string/ts_connect"
            android:textColor="@color/textcolor"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headTitle"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/headTitle"
            android:layout_width="200dp"
            android:layout_height="49dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/cpflogo" />

        <TextView
            android:id="@+id/isSayiText2"
            android:layout_width="50dp"
            android:layout_height="23dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/textcolor"
            android:gravity="center"
            android:text="@string/adetText"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/isSayisi"
            app:layout_constraintTop_toBottomOf="@+id/serDateBas"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/isSayiText"
            android:layout_width="50dp"
            android:layout_height="23dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/textcolor"
            android:gravity="center"
            android:text="@string/isText"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/serTarihText"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/dash"
            android:layout_width="30dp"
            android:layout_height="23dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="5dp"
            android:background="@color/textcolor"
            android:gravity="center"
            android:text="-"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/serDateBas"
            app:layout_constraintTop_toBottomOf="@+id/tekNameText"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/serDateBit"
            android:layout_width="100sp"
            android:layout_height="23dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border_style"
            android:ems="10"
            android:focusable="false"
            android:hint="T.Bit"
            android:inputType="date"
            android:textColor="@color/textcolor"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/dash"
            app:layout_constraintTop_toBottomOf="@+id/tekNameText"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/SerTekTitLE"
            android:layout_width="50dp"
            android:layout_height="23dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/textcolor"
            android:gravity="center"
            android:text="@string/tek_title_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/serBilTextTitle"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/serTarihText"
            android:layout_width="50dp"
            android:layout_height="23dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/textcolor"
            android:gravity="center"
            android:text="@string/tarih"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SerTekTitLE"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/serBilTextTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/border_style_button"
            android:gravity="center"
            android:text="SERVİS BİLGİLERİ"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.131" />

        <TextView
            android:id="@+id/sBagDurumText"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="4dp"
            android:gravity="left"
            android:text="@string/conntext"
            android:textColor="@color/textcolor"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/serBulButton"
            android:background="@drawable/border_style_button"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:onClick="bul"
            android:text="@string/ara"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/serDateBit"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/serDateBas"
            android:layout_width="100sp"
            android:layout_height="23dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border_style"
            android:ems="10"
            android:focusable="false"
            android:hint="T.Baş"
            android:inputType="date"
            android:textColor="@color/textcolor"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/serTarihText"
            app:layout_constraintTop_toBottomOf="@+id/tekNameText"
            app:layout_constraintVertical_bias="0.0" />

        <ListView
            android:id="@+id/servisList"
            android:layout_width="380dp"
            android:layout_height="450dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border_style"
            android:foregroundGravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.379"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/serBulButton"
            app:layout_constraintVertical_bias="0.012" />

        <TextView
            android:id="@+id/isSayisi"
            android:layout_width="30dp"
            android:layout_height="23dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border_style"
            android:gravity="center"
            android:text="Sayı"
            android:textColor="@color/textcolor"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/isSayiText"
            app:layout_constraintTop_toBottomOf="@+id/serDateBas"
            app:layout_constraintVertical_bias="0.001" />

        <Button
            android:id="@+id/geriButton"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/border_style_button"
            android:onClick="geri"
            android:text="@string/rapor"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/servisList"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tekNameText"
            android:layout_width="290dp"
            android:layout_height="23dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="Teknisyen"
            android:textColor="@color/textcolor"
            android:textSize="16sp"
            android:background="@drawable/border_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/SerTekTitLE"
            app:layout_constraintTop_toBottomOf="@+id/serBilTextTitle" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>